# COMP345A1

./: .gitignore  CMakeLists.txt  Cell.h  Character.cpp  Character.h  Fighter.cpp  Fighter.h  Map.cpp  Map.h  doxyfile  main.cpp  test
Containers/: ItemContainer.cpp  ItemContainer.h
Items/: Armor.cpp  Armor.h  Belt.cpp  Belt.h  Boots.cpp  Boots.h  Helmet.cpp  Helmet.h  Item.cpp  Item.h  Ring.cpp  Ring.h  Shield.cpp  Shield.h  Weapon.cpp  Weapon.h
docs/html/: _armor_8h_source.html  _belt_8h_source.html  _boots_8h_source.html  _cell_8h_source.html  _character_8h.html  _character_8h_source.html  _fighter_8h.html  _fighter_8h_source.html  _helmet_8h_source.html  _item_8h_source.html  _item_container_8h_source.html  _map_8h_source.html  _ring_8h_source.html  _shield_8h_source.html  _test_fighter_8cpp.html  _test_fighter_8h.html  _test_fighter_8h_source.html  _weapon_8h_source.html  annotated.html  class_armor-members.html  class_armor.html  class_belt-members.html  class_belt.html  class_boots-members.html  class_boots.html  class_cell.html  class_character-members.html  class_character.html  class_fighter-members.html  class_fighter.html  class_helmet-members.html  class_helmet.html  class_item-members.html  class_item.html  class_item_container-members.html  class_item_container.html  class_map.html  class_ring-members.html  class_ring.html  class_shield-members.html  (+16 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_a.js  classes_b.js  files_2.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_8.js  functions_9.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js
docs/latex/: _armor_8h_source.tex  _belt_8h_source.tex  _boots_8h_source.tex  _cell_8h_source.tex  _character_8h.tex  _character_8h_source.tex  _fighter_8h.tex  _fighter_8h_source.tex  _helmet_8h_source.tex  _item_8h_source.tex  _item_container_8h_source.tex  _map_8h_source.tex  _ring_8h_source.tex  _shield_8h_source.tex  _test_fighter_8cpp.tex  _test_fighter_8h.tex  _test_fighter_8h_source.tex  _weapon_8h_source.tex  annotated.tex  class_armor.tex  class_belt.tex  class_boots.tex  class_cell.tex  class_character.tex  class_fighter.tex  class_helmet.tex  class_item.eps  class_item.tex  class_item_container.tex  class_map.tex  class_ring.tex  class_shield.tex  class_test_fighter.tex  class_weapon.tex  files.tex  hierarchy.tex  refman.tex  struct_coordinate.tex  struct_enchantment.tex
src/: Character.h  Fighter.h  TestRunner.cpp  main.cpp
src/classes/Armor/: Armor.cpp  Armor.h
src/classes/Belt/: Belt.cpp  Belt.h
src/classes/Boots/: Boots.cpp  Boots.h
src/classes/Campaign/: Campaign.cpp  Campaign.h
src/classes/Cell/: Cell.cpp  Cell.h
src/classes/Character/: Character.cpp  Character.h
src/classes/CharacterEditor/: CharacterEditor.cpp  CharacterEditor.h
src/classes/CharacterStrategy/: CharacterStrategy.cpp  CharacterStrategy.h
src/classes/Dice/: Dice.cpp  Dice.h
src/classes/Fighter/: Fighter.cpp  Fighter.h
src/classes/Game/: Game.cpp  Game.h
src/classes/GameLogger/: GameLogger.h
src/classes/Helmet/: Helmet.cpp  Helmet.h
src/classes/Item/: Item.cpp  Item.h
src/classes/ItemContainer/: ItemContainer.cpp  ItemContainer.h
src/classes/ItemContainerEditor/: ItemContainerEditor.cpp  ItemContainerEditor.h
src/classes/Map/: Map.cpp  Map.h
src/classes/MapEditor/: MapEditor.cpp  MapEditor.h
src/classes/ObserverPattern/: CharacterObserver.cpp  Observer.h  Subject.cpp  Subject.h
src/classes/Ring/: Ring.cpp  Ring.h
src/classes/Shield/: Shield.cpp  Shield.h
src/classes/Weapon/: Weapon.cpp  Weapon.h
src/tests/TestDice/: TestDice.cpp
src/tests/TestFighter/: TestFighter.cpp  TestFighter.h
src/tests/TestItems/: TestItems.cpp  TestItems.h
src/tests/TestMap/: TestMap.cpp  TestMap.h
src/tests/TestMapEditor/: TestMapEditor.cpp  TestMapEditor.h
unitTests/: TestFighter.cpp  TestFighter.h  TestRunner.cpp
